--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+flutter_icons:
+  ios: true
+  android: true
+  web: true
+  image_path_ios: "assets/logo.png"
+  image_path_android: "assets/logo.png"
 flutter:
 
   # The following line ensures that the Material Icons font is
